# ColorfulCode

./: .editorconfig  .gitignore  .gitmodules  ColorfulCode.sln  README.md
ColorfulCode/: Bindings.cs  ColorfulCode.csproj  Exception.cs  Syntax.cs  Theme.cs
ColorfulCode.Samples/: ColorfulCode.Samples.csproj  Program.cs
native/: Cargo.toml  test.py
native/src/: lib.rs
