[package]
name = "native"
version = "0.0.0"
authors = ["Tseng Hsiang Sung <ths@saltfish.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
syntect = { path = "../syntect" }

[lib]
name = "syntect"
crate-type = ["cdylib"]
